Removes the getFirst() method that was not supported by java 11